2001-10-03  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc: Fixed another world-wrapping crash.
	* ucsched.cc:  Only activate 3 kinds of eggs.

2001-10-02  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.cc (public): Handle more SI books.

2001-10-01  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc,etc:  Separate dead_party list for dead
	companions.

2001-09-30  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Offsets in obj_sprite_effect() are negated.
	* usecode/bgintrinsics.h, etc: npc_sprite_effect() becomes
	obj_sprite_effect().
	* readnpcs.cc: Skip all the extra trappers.
	* actors.cc: Actor::is_blocked() is used for all, not just monsters.

2001-09-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: try harder to avoid putting objects in the actor-container
	itself
	* contain.cc: allow putting a bag in a bag if dont_check is set
	* ucdisasm.cc: cosmetic fix with display of backward jumps
	* tools/Makefile.am: fixed make warning
	* Paperdoll_gump.cc: option for showing non-readied objects
	* exult_constants.h: made the CERR/COUT macro's 'if'-safe
	
2001-09-29  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/siintrinsics.cc: Reduce_health added (x87).
	* actors.cc: Use Avatar's real height.
	* usecode/ucinternal.cc (Usecode_internal): Fixed ARRC bug in
	cases where one or more values are empty arrays.

2001-09-28  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.cc: Give fake HP's to serpent statue in SI.
	* objs/egg.cc: Greater range of lift for 'something_on' eggs.

2001-09-28  Dancer Vesperman  <dancer@users.sourceforge.net>

	* keys.cc: get my own casts right :)...oh, and others, too
	* gamewin.cc: More cast conversion...many of which shouldn't be necessary. Hrm.
	* readnpcs.cc: More cast conversion.
	* schedule.cc: More cast conversion.

2001-09-27  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc (Usecode_function):  'Last_created' is now