@@ -1,5 +1,6 @@
 2001-10-03  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* gamewin.cc: You can always read a sign.
 	* drag.cc: Fixed another world-wrapping crash.
 	* ucsched.cc:  Only activate 3 kinds of eggs.
 
